--- a/test.css
+++ b/test.css
@@ -3,8 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root{
+    /* --col-pri: linear-gradient(134deg,white 10%,black  90%); */
+    --col-pri: linear-gradient(134deg, #6A98F0 20%, #4961DC 90%);
+   
+}
 body{
-    background: coral;
+    background: rgb(49, 46, 46);
     color: white;
 }
 
@@ -16,7 +21,7 @@ a{
 }
 a:hover{
     color: black;
-    /* background: black; */
+    
 }
 
 .header{
@@ -175,10 +180,10 @@ a:hover{
     
 }
 .hero .svg-style{
-    width: 40%;
+    width: 50%;
     position: fixed;
-    top: 0px;
-    right: -50px;
+    top: 0;
+    right: -100px;
     z-index: -1;
 }
 .hero .svg-style2{
@@ -200,13 +205,13 @@ a:hover{
     margin: 0 auto;
     position: relative;
 }
-.hero .intro-info .intro h1{
+.hero .intro-info .intro-head h1{
     font-size: 6rem;
     line-height: 5.5rem;
     letter-spacing: .4rem;
 
 }
-.hero .intro-info .intro h3{
+.hero .intro-info .intro-head h3{
     /* text-align: left; */
     font-size: 2rem;
     line-height: 2rem;
@@ -222,6 +227,64 @@ a:hover{
 }
 .hero .intro-info .intro-sub{
     font-size: 3rem;
+    padding: .2rem 2rem;
+    position: relative;
+    background: linear-gradient(rgba(255,255,255,0.2),rgba(255,255,255,0.2));
+    overflow: hidden;
+    margin: 1rem 0;
+    border-radius: 5px;
 }
+.hero .intro-info .intro-sub::after{
+    content: '';
+    position: absolute;
+    background: rgba(0,0,0,0.1);
+    left: 50%;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+@keyframes shine{
+    0%{
+       top: -300%;
+        left: -500%;
+       
+    }
+    50%{
+        top: 200%;
+      left: 500%;
+     
+     
+    }
+    100%{
+        top: -300%;
+        left: -500%;
+       
+       
+    }
+}
+.hero .intro-info .intro-sub::before{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: linear-gradient(90deg, transparent,rgba(255,255,255,.4),transparent);
+    animation: shine 10s ease-in-out infinite alternate-reverse both;
+    animation-delay: 10s;
 
+}
+.hero .intro-info .cta-btn{
+    margin: 1rem 0;
+}
+.hero .intro-info .cta-btn a{
+   
+    padding: .5rem 2rem;
+    background: linear-gradient(134deg,    #5a74f7 20%,   #6A98F0 90%);
+    border-radius: 5px;
 
+}
+.hero .intro-info .cta-btn a:hover{
+    /* background: linear-gradient(134deg,black 10%,white 90%); */
+    background:  linear-gradient(134deg, #6A98F0 20%,  #5a74f7 90%) ;
+    }
