--- a/test.css
+++ b/test.css
@@ -12,6 +12,7 @@ body{
     background: rgb(49, 46, 46);
     color: #ddd;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow-x: hidden;
 }
 h1,h2,h3,h4,h5,h6{
     color: white;
@@ -62,7 +63,7 @@ a:hover{
 }
 .header .header-wrapper{
     width: 100%;
-    height: 100px;
+    /* height: 100%; */
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
@@ -71,11 +72,19 @@ a:hover{
     z-index: 100;
     /* background:linear-gradient(to right,rgba(0,0,0,0.1) ,rgba(0,0,0,0.1)); */
     background: rgba(49, 46, 46,.05);
+    transition: ease-in-out .3s;
 
+}
+.logo{
+    padding: 10px 0;
+    transition: ease-in-out .3s;
 }
 .logo img{
     max-width: 120px;
-    padding: 10px 0;
+    
+    width: 100%;
+    height: auto;
+   
 }
 .nav-bar{
     /* position: absolute; */
@@ -85,7 +94,7 @@ a:hover{
     left: 0;
     right: 0;
     z-index: 100;
-    height: 100px;
+    /* height: 100px; */
    
 }
 .nav-bar .menu{
@@ -180,12 +189,21 @@ a:hover{
     transform: translateY(0);
 }
 }
+/* .wrapper-hero-about{
+   position: relative;
+}
+.wrapper-hero-about .hero-img{
+    position: sticky;
+    top: 300px;
+
+} */
 .hero{
     /* padding-top: 100px; */
-    text-align: center;
+  
     width: 100%;
     height: calc(100vh - 100px);
-    display: flex;
+    display: grid;
+    grid-template-columns: 70% 30%;
     align-items: center;
     justify-content: space-between;
     position: relative;
@@ -201,8 +219,39 @@ a:hover{
    /* height: auto; */
     /* width: 100%; */
     margin-left: auto;
-    position: sticky;
-    right: 0;
+    position: absolute;
+    right: 0px;
+    opacity: 1;
+    bottom: 0;
+    /* width: 100%; */
+    max-height: 100%;
+    max-width: 100%;
+    /* bottom: 0; */
+    /* align-items: right; */
+    /* height: min-content; */
+    /* position: absolute; */
+    /* top: 0; */
+    /* right: 0; */
+    /* bottom: 0; */
+    /* height: 80%; */
+    
+}
+.hero .hero-img img{
+    /* width: 30%; */
+    /* display: block; */
+    /* padding-top: 100px; */
+    /* max-width: 100%; */
+    /* height: auto; */
+   
+   /* height: auto; */
+    /* width: 100%; */
+   
+    max-height: 100%;
+    max-width: 100%;
+    min-width: 160px;
+    min-height: 350px;
+    
+    /* bottom: 0; */
     /* align-items: right; */
     /* height: min-content; */
     /* position: absolute; */
@@ -213,10 +262,10 @@ a:hover{
     
 }
 .hero .svg-style{
-    width: 50%;
+    width: 45%;
     position: absolute;
     top: -100px;
-    right: -100px;
+    right: 41px;
     z-index: -1;
 }
 .hero .svg-style2{
@@ -227,7 +276,7 @@ a:hover{
     z-index: 1;
 }
 .hero .intro-info{
-    
+    text-align: center;
     max-width: 100%;
     display: flex;
     flex-direction: column;
@@ -240,10 +289,10 @@ a:hover{
     position: relative;
     margin-bottom: 100px;
 }
-/* .hero .intro-info .intro-head{
-    background: url('hello.png') no-repeat center;
-    background-size: contain;
-} */
+.hero .intro-info .intro-head{
+   
+    position: relative;
+}
 .hero .intro-info .intro-head h1{
     font-size: 6rem;
     line-height: 5.5rem;
@@ -442,23 +491,22 @@ a:hover{
 }
 .hero .intro-info .intro-head .dev-hello {
     position: absolute;
-    display: flex;
-    font-size: 20vw;
-    top: -25%;
-    left: 0;
+  
+    font-size: 15vw;
+    left: -100px;
+    top: -50px;
     font-family: "Montserrat";
     color: rgb(68, 64, 64);
     z-index: -5;
     
-    align-content: center;
-    justify-content: center;
+   
     
 }
 
 .about-me .grid-view{
     display: grid;
     grid-template-columns: 
-    50%  50%;
+    75%  25%;
     grid-gap: 20px;
 }
 .about-me .container .cols{
@@ -505,6 +553,7 @@ a:hover{
    position: absolute;
    z-index: -50;
    color: #9aa7e7;
+   opacity: .5;
     width: 100%;
     height: 100%;
     /* background: chartreuse; */
