--- a/test.css
+++ b/test.css
@@ -224,7 +224,7 @@ a:hover{
     opacity: 1;
     bottom: 0;
     /* width: 100%; */
-    max-height: 100%;
+    max-height: auto;
     max-width: 100%;
     /* bottom: 0; */
     /* align-items: right; */
@@ -249,7 +249,7 @@ a:hover{
     max-height: 100%;
     max-width: 100%;
     min-width: 160px;
-    min-height: 350px;
+    min-height: 320px;
     
     /* bottom: 0; */
     /* align-items: right; */
@@ -506,7 +506,7 @@ a:hover{
 .about-me .grid-view{
     display: grid;
     grid-template-columns: 
-    75%  25%;
+    70%  30%;
     grid-gap: 20px;
 }
 .about-me .container .cols{
@@ -557,4 +557,33 @@ a:hover{
     width: 100%;
     height: 100%;
     /* background: chartreuse; */
+}
+
+/* ================ My Projects================ */
+.my-projects .container .project-wrapper{
+    display: grid;
+    grid-template-columns: 1fr  1fr;
+    grid-row: 1fr;
+    font-size: 1.1em;
+    letter-spacing: 0.1em;
+    text-align: justify;
+    padding: 15px;
+}
+.my-projects .container .project-wrapper > div{
+    padding:0 1em;
+}
+.my-projects .container .project-wrapper .project-text .project-content h2{
+    padding: 0 0 1em 0;
+    font-size: 1.5em;
+
+}
+.my-projects .container .project-wrapper .project-view {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+   
+}
+.my-projects .container .project-wrapper .project-graphics img{
+    width: 100%;
+    height: 100%;
 }
