--- a/test.css
+++ b/test.css
@@ -55,6 +55,37 @@ a:hover{
 .container-thin{
     padding: 100px;
 }
+
+.cta-btn {
+   
+    padding: .5em 1em;
+    background: linear-gradient(134deg,#5a74f7 20%,   #6A98F0 90%);
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+    display: inline-block;
+    font-size: .8em;
+    margin: .5em .1em;
+    
+
+}
+.cta-btn-square {
+   
+    padding: .5em;
+    background: linear-gradient(134deg,#5a74f7 20%,   #6A98F0 90%);
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+    display: inline-block;
+    font-size: .8em;
+    margin: .5em .1em;
+
+}
+.cta-btn:hover,.cta-btn-square:hover{
+    transition:all 0.3s;
+    /* background: linear-gradient(134deg,black 10%,white 90%); */
+    background:  linear-gradient(134deg, #6A98F0 20%,  #5a74f7 90%) ;
+   
+}
+
 .header{
     color: white;
     height: 100px;
@@ -568,6 +599,7 @@ a:hover{
     letter-spacing: 0.1em;
     text-align: justify;
     padding: 15px;
+    margin: 50px 0;
 }
 .my-projects .container .project-wrapper > div{
     padding:0 1em;
@@ -577,13 +609,31 @@ a:hover{
     font-size: 1.5em;
 
 }
+.my-projects .container .project-wrapper .project-text .more-info{
+    display: flex;
+    justify-content: space-between;
+}
+.my-projects .container .project-wrapper .project-text .more-info >div{
+    text-align: center;
+    margin: 50px 0;
+}
+.my-projects .container .project-wrapper .project-text .more-info .tech-used{
+    font-size: 2em;
+    color:#6D83F2;
+}
+.my-projects .container .project-wrapper .project-text .more-info .tech-used >  {
+    padding-left: 1em;
+}
 .my-projects .container .project-wrapper .project-view {
     justify-content: center;
     align-items: center;
     display: flex;
+    /* background:linear-gradient(rgba(134, 147, 212, 0.3), rgba(199, 208, 255,.3)); */
+   
    
 }
 .my-projects .container .project-wrapper .project-graphics img{
     width: 100%;
     height: 100%;
+    border-radius: 10px;
 }
