--- a/test.css
+++ b/test.css
@@ -9,10 +9,17 @@
    
 }
 body{
+    width: 100%;
+    height: 100%;
     background: rgb(49, 46, 46);
     color: #ddd;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    overflow-x: hidden;
+   
+}
+html{
+    margin: 0;
+    padding: 0;
+    /* overflow-x: hidden; */
 }
 h1,h2,h3,h4,h5,h6{
     color: white;
@@ -292,13 +299,13 @@ a:hover{
     /* height: 80%; */
     
 }
-.hero .svg-style{
+/* .hero .svg-style{
     width: 45%;
     position: absolute;
     top: -100px;
-    right: 41px;
+    right: 100px;
     z-index: -1;
-}
+} */
 .hero .svg-style2{
     /* width: 70%; */
     position: absolute;
@@ -637,3 +644,6 @@ a:hover{
     height: 100%;
     border-radius: 10px;
 }
+
+
+/* ====================== Contact Form ================== */
