--- a/test.css
+++ b/test.css
@@ -8,6 +8,13 @@
     --col-pri: linear-gradient(134deg, #6A98F0 20%, #4961DC 90%);
    
 }
+html{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+}
 body{
     width: 100%;
     height: 100%;
@@ -16,11 +23,7 @@ body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    
 }
-html{
-    margin: 0;
-    padding: 0;
-    /* overflow-x: hidden; */
-}
+
 h1,h2,h3,h4,h5,h6{
     color: white;
     display: block;
@@ -54,16 +57,32 @@ a:hover{
 .align-center{
     text-align: center;
     text-transform: uppercase;
-    padding-bottom: 1em;
+    padding: 1em 0;
 }
 .container{
     padding:50px 150px ;
     margin: 0 auto;
     max-width: 1400px;
 }
-.container-thin{
-    padding: 100px;
+@media (max-width:1200px){
+    .container{
+        padding: 100px;
+    }
+    
 }
+@media (max-width:992px){
+    .container{
+        padding: 50px;
+    }
+    
+}
+@media (max-width:768px){
+    .container{
+        padding: 50px 20px;
+    }
+    
+}
+
 
 .cta-btn {
    
@@ -118,6 +137,8 @@ a:hover{
     background:  linear-gradient(134deg, #6A98F0 20%,  #5a74f7 90%) ;
     color: #C7D0FF;
 }
+
+
 
 .header{
     color: white;
@@ -310,7 +331,7 @@ a:hover{
    /* height: auto; */
     /* width: 100%; */
    
-    max-height: 100vh;
+    max-height: 100%;
     max-width: 100%;
     min-width: 160px;
     min-height: 280px;
@@ -576,7 +597,7 @@ a:hover{
     grid-gap: 20px;
 }
 .about-me .container .cols{
-    padding: 0 15px;
+    /* padding: 0 15px; */
     text-align: justify;
     line-height: 1.5;
     font-size: 1.1em;
@@ -588,9 +609,11 @@ a:hover{
 }
 .about-me .container .what-i-do .flex-b3{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;   
     margin: 0 auto;
+   
+    
 }
 .about-me .container .what-i-do .flex-b3 >div{
     padding: 0 15px;
@@ -598,6 +621,17 @@ a:hover{
     font-size: 1.1em;
     letter-spacing: 0.1em;
 }
+@media (max-width:768px)
+{
+    .about-me .container .what-i-do .flex-b3{
+        flex-wrap: wrap;
+        max-width: 600px;
+    }
+    .about-me .container .what-i-do .flex-b3 >div{
+        padding: 0px;  
+    }
+}
+
 
 /* ================ My Skills ========== */
 .about-me .container .my-skills{
@@ -632,12 +666,20 @@ a:hover{
     grid-row: 1fr;
     font-size: 1.1em;
     letter-spacing: 0.1em;
+    grid-gap: 20px;
     text-align: justify;
-    padding: 15px;
+    /* padding: 15px; */
     margin: 50px 0;
 }
+@media(max-width:768px)
+{
+    .my-projects .container .project-wrapper{
+        
+        grid-template-columns: 1fr;
+    }
+}
 .my-projects .container .project-wrapper > div{
-    padding:0 1em;
+    /* padding:0 1em; */
 }
 .my-projects .container .project-wrapper .project-text .project-content h2{
     padding: 0 0 1em 0;
@@ -683,6 +725,12 @@ a:hover{
     align-items: center;
     /* background: crimson; */
 }
+@media(max-width:768px)
+{
+    .contact-me .container .wrapper-all{
+       flex-wrap: wrap;
+    }
+}
 .contact-me .container .wrapper-all .contact-image{
     background: url("small-squares.svg");
     background-size: cover;
@@ -690,6 +738,7 @@ a:hover{
     display: flex;
     justify-content: space-evenly;
     border-radius: 10px;
+    max-width: 550px;
 }
 .contact-me .container .wrapper-all .contact-image .social{
     display: flex;
