--- a/test.css
+++ b/test.css
@@ -16,8 +16,7 @@ html{
     height: 100%;
 }
 body{
-    width: 100%;
-    height: 100%;
+    
     background: rgb(54, 51, 51);
     color: #ddd;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -78,9 +77,49 @@ a:hover{
 }
 @media (max-width:768px){
     .container{
-        padding: 50px 20px;
+        padding: 25px 20px;
     }
-    
+    #section-title{
+        text-align: center;
+        font-size: 1.4rem;
+        font-weight: 400;
+        font-family: "Montserrat";
+        padding: 30px 0;
+        text-transform: uppercase;
+    }
+    #section-subtitle{
+        text-align: center;
+        font-size: 1.2rem;
+        font-weight: 400;
+        font-family: "Montserrat";
+        padding: 20px 0;
+        text-transform: uppercase;
+    }
+}
+@media (max-width:480px){
+    .container{
+        padding: 20px 10px;
+    }
+    p{
+        text-align: initial;
+        font-size: .9em;
+    }
+    #section-title{
+        text-align: center;
+        font-size: 1.2rem;
+        font-weight: 400;
+        font-family: "Montserrat";
+        padding: 20px 0;
+        text-transform: uppercase;
+    }
+    #section-subtitle{
+        text-align: center;
+        font-size: 1.1rem;
+        font-weight: 400;
+        font-family: "Montserrat";
+        padding: 10px 0;
+        text-transform: uppercase;
+    }
 }
 
 
@@ -172,15 +211,11 @@ a:hover{
    
 }
 .nav-bar{
-    /* position: absolute; */
-   
     font-family: "Montserrat";
     top: 0;
     left: 0;
     right: 0;
     z-index: 100;
-    /* height: 100px; */
-   
 }
 .nav-bar .menu{
     display: flex;
@@ -274,17 +309,8 @@ a:hover{
     transform: translateY(0);
 }
 }
-/* .wrapper-hero-about{
-   position: relative;
-}
-.wrapper-hero-about .hero-img{
-    position: sticky;
-    top: 300px;
 
-} */
 .hero{
-    /* padding-top: 100px; */
-  
     width: 100%;
     height: calc(100vh - 100px);
     display: grid;
@@ -292,61 +318,23 @@ a:hover{
     align-items: center;
     justify-content: space-between;
     position: relative;
-    /* overflow: hidden; */
 }
 .hero .hero-img{
-    /* width: 30%; */
-    /* display: block; */
-    /* padding-top: 100px; */
-    /* max-width: 100%; */
-    /* height: auto; */
-   
-   /* height: auto; */
-    /* width: 100%; */
     margin-left: auto;
     position: absolute;
     right: 0;
     opacity: 1;
     bottom: 0;
-    /* width: 100%; */
     max-height: 100%;
     max-width: 100%;
-    /* bottom: 0; */
-    /* align-items: right; */
-    /* height: min-content; */
-    /* position: absolute; */
-    /* top: 0; */
-    /* right: 0; */
-    /* bottom: 0; */
-    /* height: 80%; */
-    
 }
 .hero .hero-img img{
-    /* width: 30%; */
-    /* display: block; */
-    /* padding-top: 100px; */
-    /* max-width: 100%; */
-    /* height: auto; */
-   
-   /* height: auto; */
-    /* width: 100%; */
-   
     max-height: 100%;
     max-width: 100%;
     min-width: 160px;
     min-height: 280px;
     height: 100%;
     bottom: 0;
-    
-    /* bottom: 0; */
-    /* align-items: right; */
-    /* height: min-content; */
-    /* position: absolute; */
-    /* top: 0; */
-    /* right: 0; */
-    /* bottom: 0; */
-    /* height: 80%; */
-    
 }
 /* .hero .svg-style{
     width: 45%;
@@ -496,17 +484,7 @@ a:hover{
         transform: scale(1) rotate(360deg);
     }
 }
-@keyframes pulse{
-    0%{
-        transform: scale(.8);
-    }
-    50%{
-        transform: scale(1.2);
-    }
-    100%{
-        transform: scale(.8);
-    }
-}
+
 
 .hero .intro-info .social-links{
     position: relative;
@@ -585,10 +563,46 @@ a:hover{
     font-family: "Montserrat";
     color: rgb(68, 64, 64);
     z-index: -5;
-    
-   
-    
 }
+@media(max-width:992px)
+{
+    
+    .hero .hero-img{
+        display: none;
+    }
+}
+@media(max-width:768px)
+{
+    .hero .intro-info .intro-head h1{
+        font-size: 4rem;
+        line-height: 4rem;
+        letter-spacing: .1em;
+    
+    }
+    .hero .intro-info .intro-head h3{
+        font-size: 1.5rem;
+        line-height: 1.5rem;
+        letter-spacing: .1em;
+    }
+    .hero .intro-info .intro-sub{
+        font-size: 2.5rem;
+        padding: .2rem 2rem;
+        margin: 1rem 0;
+    }
+
+    .hero .intro-info .social-links img{
+        max-width: 2rem;
+    }
+    .hero .intro-info .social-links .links-s i{
+        left: 0.1em;
+        top: 0;
+    }
+    .hero .intro-info .social-links{
+        transform: translate(110px,-30px);
+    }
+
+}
+/* ================About Section ============= */
 
 .about-me .grid-view{
     display: grid;
@@ -596,12 +610,23 @@ a:hover{
     65%  35%;
     grid-gap: 20px;
 }
+.about-me .container .image-about-small{
+    display: none;
+}
 .about-me .container .cols{
     /* padding: 0 15px; */
     text-align: justify;
     line-height: 1.5;
     font-size: 1.1em;
     letter-spacing: 0.1em;
+}
+.about-me .container .image-about{
+    display: none;
+}
+.about-me .container .image-about img{
+    max-width: 200px;
+    max-height: 300px;
+    width: 100%;
 }
 .about-me .container .cols p{
     padding-bottom: 1em;
@@ -621,6 +646,14 @@ a:hover{
     font-size: 1.1em;
     letter-spacing: 0.1em;
 }
+@media (max-width:992px) and (min-width:768px)
+{
+    .about-me .container .image-about{
+        display: block;
+        width: 100%;
+        height: 100%;
+    }
+}
 @media (max-width:768px)
 {
     .about-me .container .what-i-do .flex-b3{
@@ -630,8 +663,25 @@ a:hover{
     .about-me .container .what-i-do .flex-b3 >div{
         padding: 0px;  
     }
+    .about-me .grid-view{
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+    }
+    .about-me .container .image-about-small{
+        display: block;
+    }
+    .about-me .container .image-about-small img{
+        display: block;
+        margin: 0 auto;
+        max-width: 200px;
+        height: auto;
+        padding-bottom: 20px;
+        width: 100%;
+    }
 }
-
+@media (max-width:480px){
+   
+}
 
 /* ================ My Skills ========== */
 .about-me .container .my-skills{
@@ -644,6 +694,9 @@ a:hover{
     padding: 150px 0;
     font-size: 100px;
     color: #6D83F2;
+}
+.about-me .container .my-skills .outer-parallax img{
+    width: 100px;
 }
 .about-me .container .my-skills .inner-parallax p{
     
@@ -658,6 +711,19 @@ a:hover{
     height: 100%;
     /* background: chartreuse; */
 }
+@media (max-width:480px){
+    .about-me .container .my-skills .inner-parallax  {
+        display: none;
+    }
+    .about-me .container .my-skills .outer-parallax{
+        padding: 20px 0;
+        font-size: 50px;
+    }
+    .about-me .container .my-skills .outer-parallax img{
+        width: 50px;
+    }
+}
+
 
 /* ================ My Projects================ */
 .my-projects .container .project-wrapper{
@@ -671,18 +737,9 @@ a:hover{
     /* padding: 15px; */
     margin: 50px 0;
 }
-@media(max-width:768px)
-{
-    .my-projects .container .project-wrapper{
-        
-        grid-template-columns: 1fr;
-    }
-}
-.my-projects .container .project-wrapper > div{
-    /* padding:0 1em; */
-}
+
 .my-projects .container .project-wrapper .project-text .project-content h2{
-    padding: 0 0 1em 0;
+    padding: .5em 0;
     font-size: 1.5em;
 
 }
@@ -692,7 +749,7 @@ a:hover{
 }
 .my-projects .container .project-wrapper .project-text .more-info >div{
     text-align: center;
-    margin: 50px 0;
+    margin-top: 50px;
 }
 .my-projects .container .project-wrapper .project-text .more-info .tech-used{
     font-size: 2em;
@@ -714,7 +771,37 @@ a:hover{
     height: 100%;
     border-radius: 10px;
 }
-
+@media(max-width:768px)
+{
+    .my-projects .container .project-wrapper{
+        
+        grid-template-columns: 1fr;
+    }
+    .my-projects .container .project-wrapper .project-text .project-content h2{
+        font-size: 1.3em;
+    }
+    .my-projects .container .project-wrapper .project-text .more-info >div{
+        margin-top: 25px;
+    }
+    .my-projects .container .project-wrapper{
+        
+        margin: 25px 0;
+    }
+}
+@media(max-width:480px)
+{
+    .my-projects .container .project-wrapper{
+        
+        margin: 20px 0;
+    }
+    .my-projects .container .project-wrapper .project-text .project-content h2{
+        font-size: 1.2em;
+    
+    }
+    .my-projects .container .project-wrapper .project-text .more-info >div{
+        margin-top: 20px;
+    }
+}
 
 /* ====================== Contact Form ================== */
 .contact-me .container .wrapper-all{
@@ -814,7 +901,25 @@ input {
 textarea {
     outline: none;
     border: none;
-  }
+}
+@media (max-width:480px){
+    .contact-me .links{
+       
+        font-size: 1.5em;
+        padding:.5em;
+    }
+    .links >a{
+        padding: .2em 0;
+    }
+    .mail{
+        padding:1em .5em;
+        font-size: 1em;
+    }
+    .contact-me .container  .wrap-inputs .inputs{
+        font-size: .7em;
+    }
+}
+
   /* ==============Footer============== */
   .footer{
       background: var(--col-pri);
