--- a/test.css
+++ b/test.css
@@ -309,7 +309,19 @@ a:hover{
     transform: translateY(0);
 }
 }
-
+@media (max-width:480px)
+{
+    .nav-btn{
+        
+        top: 5px;
+        right: 5px;
+    }
+    .logo img {
+        max-width: 60px;
+        width: 100%;
+        height: auto;
+    }
+}
 .hero{
     width: 100%;
     height: calc(100vh - 100px);
@@ -343,6 +355,12 @@ a:hover{
     right: 100px;
     z-index: -1;
 } */
+.hero .hero-img-tab {
+    /* max-height: 100vh; */
+    position: relative;
+    
+}
+
 .hero .svg-style2{
     /* width: 70%; */
     position: absolute;
@@ -572,6 +590,15 @@ a:hover{
     }
 }
 @media(max-width:768px)
+{.hero .hero-img-tab img{
+    transform: translateX(-60%);
+    position: absolute;
+    z-index: -10;
+    max-width: 400px;
+    left: 100%;
+    top: -40vh;
+}}
+@media(max-width:768px)
 {
     .hero .intro-info .intro-head h1{
         font-size: 4rem;
@@ -600,7 +627,83 @@ a:hover{
     .hero .intro-info .social-links{
         transform: translate(110px,-30px);
     }
-
+    .hero .intro-info .intro-head .dev-hello {
+        left: 0;
+    }
+    
+    .hero .svg-style2{
+        /* width: 70%; */
+        position: absolute;
+        bottom: -650px;
+        /* right: -200px; */
+        z-index: 1;
+    }
+    .hero .intro-info{
+        text-align: center;
+        max-width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        font-family:"Montserrat";
+        /* font-size: 54px; */
+        padding-left: 15%;
+        margin: 0 auto;
+        position: relative;
+        margin-bottom: 100px;
+    }
+    
+}
+@media (max-width:480px){
+    .hero .intro-info .social-links .link-1{
+        transform: translate(-60px, 60px);
+       
+    }
+    .hero .intro-info .social-links .link-1 i{
+        transform: rotateZ(-10deg);
+    }
+    .hero .intro-info .social-links .link-2{
+        transform: translate(-115px, 70px);
+    }
+    .hero .intro-info .social-links .link-2 i{
+        transform: rotateZ(0deg);
+    }
+    .hero .intro-info .social-links .link-3{
+        transform: translate(-165px, 60px);
+    }
+    .hero .intro-info .social-links .link-3 i{
+        transform: rotateZ(20deg);
+    }
+    .hero .intro-info .social-links .link-4{
+        transform: translate(-210px, 35px);
+    }
+    .hero .intro-info .social-links .link-4 i{
+        transform: rotateZ(30deg);
+    }
+    .hero .intro-info .intro-head h1{
+        font-size: 3rem;
+        line-height: 3rem;
+        letter-spacing: .1em;
+    
+    }
+    .hero .intro-info .intro-head h3{
+        font-size: 1rem;
+        line-height: 1rem;
+        letter-spacing: .1em;
+    }
+    .hero .intro-info .intro-sub{
+        font-size: 2rem;
+        padding: .2rem 2rem;
+        margin: 1rem 0;
+    }
+    .hero .hero-img-tab img{
+        transform: translateX(-38%);
+        position: absolute;
+        z-index: -10;
+        /* max-width: 400px; */
+        /* left: 100%; */
+        top: -40vh;
+    }
 }
 /* ================About Section ============= */
 
@@ -679,9 +782,7 @@ a:hover{
         width: 100%;
     }
 }
-@media (max-width:480px){
-   
-}
+
 
 /* ================ My Skills ========== */
 .about-me .container .my-skills{
