--- a/test.css
+++ b/test.css
@@ -195,7 +195,7 @@ a:hover{
     padding: 0 5%;
     z-index: 100;
     /* background:linear-gradient(to right,rgba(0,0,0,0.1) ,rgba(0,0,0,0.1)); */
-    background: rgba(49, 46, 46,.05);
+    background: rgba(49, 46, 46,.7);
     transition: ease-in-out .3s;
 
 }
@@ -236,7 +236,7 @@ a:hover{
 @media(max-width:768px){
     .nav-bar{
         position: fixed;
-        background: coral;
+        background: rgb(48, 43, 43);
         height: 100vh;
         top: 0;
         bottom: 0;
@@ -347,19 +347,21 @@ a:hover{
     min-height: 280px;
     height: 100%;
     bottom: 0;
+    z-index: -10;
 }
-/* .hero .svg-style{
+.hero .svg-style{
     width: 45%;
     position: absolute;
     top: -100px;
-    right: 100px;
-    z-index: -1;
-} */
+    right: 0;
+    z-index: -100;
+}
 .hero .hero-img-tab {
     /* max-height: 100vh; */
     position: relative;
     
 }
+
 
 .hero .svg-style2{
     /* width: 70%; */
@@ -584,9 +586,22 @@ a:hover{
 }
 @media(max-width:992px)
 {
-    
+    .hero .hero-img-tab img{
+        transform: translateX(-80%);
+        position: absolute;
+        z-index: -10;
+        /* max-width: 400px; */
+        left: 100%;
+        top: -40vh;
+        }
+    .hero{
+        overflow: hidden;
+    }
     .hero .hero-img{
         display: none;
+    }
+    .hero .intro-info{ 
+        padding-left: 25%;
     }
 }
 @media(min-width:992px)
@@ -599,18 +614,34 @@ a:hover{
 @media(max-width:768px)
 {
     .hero .hero-img-tab img{
-    transform: translateX(-60%);
+    transform: translateX(-70%);
     position: absolute;
     z-index: -10;
-    max-width: 400px;
+    /* max-width: 400px; */
     left: 100%;
     top: -40vh;
     }
 }
 @media(max-width:768px)
-{
-    .hero{
-        overflow: hidden;
+{   .header{
+    color: white;
+    height: 100px;
+    position: relative;
+    
+}
+    .header .header-wrapper{
+        width: 100%;
+        /* height: 100%; */
+        display: flex;
+        justify-content: space-between;
+        margin: 0 auto;
+        position: fixed;
+        padding: 0 5%;
+        z-index: 100;
+        /* background:linear-gradient(to right,rgba(0,0,0,0.1) ,rgba(0,0,0,0.1)); */
+        background: rgba(49, 46, 46,.9);
+        transition: ease-in-out .3s;
+    
     }
     .hero .intro-info .intro-head h1{
         font-size: 4rem;
@@ -643,26 +674,8 @@ a:hover{
         left: 0;
     }
     
-    .hero .svg-style2{
-        /* width: 70%; */
-        position: absolute;
-        bottom: -650px;
-        /* right: -200px; */
-        z-index: 1;
-    }
-    .hero .intro-info{
-        text-align: center;
-        max-width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
-        font-family:"Montserrat";
-        /* font-size: 54px; */
-        padding-left: 15%;
-        margin: 0 auto;
-        position: relative;
-        margin-bottom: 100px;
+    .hero .intro-info{ 
+        padding-left: 20%;
     }
     
 }
@@ -709,12 +722,13 @@ a:hover{
         margin: 1rem 0;
     }
     .hero .hero-img-tab img{
-        transform: translateX(-38%);
+        transform: translateX(-50%);
         position: absolute;
         z-index: -10;
-        /* max-width: 400px; */
-        /* left: 100%; */
         top: -40vh;
+    }
+    .hero .intro-info{
+        padding-left: 5%;
     }
 }
 /* ================About Section ============= */
