--- a/test.css
+++ b/test.css
@@ -17,7 +17,7 @@ html{
 }
 body{
     
-    background: rgb(54, 51, 51);
+    background: rgb(29, 27, 27);
     color: #ddd;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    
@@ -50,7 +50,7 @@ a:hover{
     font-size: 1.2rem;
     font-weight: 400;
     font-family: "Montserrat";
-    padding: 30px 0;
+    padding: 25px 0;
     text-transform: uppercase;
 }
 .align-center{
@@ -59,7 +59,7 @@ a:hover{
     padding: 1em 0;
 }
 .container{
-    padding:50px 150px ;
+    padding:30px 150px ;
     margin: 0 auto;
     max-width: 1400px;
 }
@@ -581,7 +581,7 @@ a:hover{
     left: -100px;
     top: -50px;
     font-family: "Montserrat";
-    color: rgb(68, 64, 64);
+    color: rgb(41, 38, 38);
     z-index: -5;
 }
 @media(max-width:992px)
@@ -639,7 +639,7 @@ a:hover{
         padding: 0 5%;
         z-index: 100;
         /* background:linear-gradient(to right,rgba(0,0,0,0.1) ,rgba(0,0,0,0.1)); */
-        background: rgba(49, 46, 46,.9);
+        background: rgba(0, 0, 0, 0.9);
         transition: ease-in-out .3s;
     
     }
