--- a/css/test.css
+++ b/css/test.css
@@ -776,9 +776,14 @@ a:hover{
     padding-bottom: 1em;
 
 }
+
+/* =============== What I do ======= */
+.what-i-do{
+    position: relative;
+}
 .about-me .container .what-i-do .flex-b3{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;   
     margin: 0 auto;
    
@@ -786,9 +791,114 @@ a:hover{
 }
 .about-me .container .what-i-do .flex-b3 >div{
     padding: 0 15px;
-    text-align: justify;
+    text-align: center;
     font-size: 1.1em;
     letter-spacing: 0.1em;
+    background: #303030;
+    margin: 0 15px;
+    padding: 15px;
+    /* min-width: 400px; */
+    flex-wrap: wrap;
+}
+.about-me .container .what-i-do .game img{
+    position: absolute;
+    z-index: -1000;
+    max-width: 200px;
+    left: 0px;
+    transition: .5s;
+}
+/* .about-me .container .what-i-do .game:hover{
+    transform: rotateZ(10deg) translateX(10px);
+    transition: .7s;
+} */
+.about-me .container .what-i-do .game:hover img{
+    transform: rotateZ(-30deg) translateX(-80px);
+    transition: .7s;
+}
+.about-me .container .what-i-do .web{
+    transition: .5s;
+}
+.about-me .container .what-i-do .web .tilted{
+    transition: 1.5s;
+    display: inline-block;
+}
+.about-me .container .what-i-do .web:hover{
+    animation: eq .8s ease ;
+}
+.about-me .container .what-i-do .web .tilted{
+    transition: 1.5s all;
+   
+  }
+.about-me .container .what-i-do .web:hover .tilted{
+  animation: tilt 1s ease-in-out 250ms reverse;
+ 
+}
+/* .about-me .container .what-i-do .graphics  {
+    transition: 5s ease-in-out; 
+} */
+.about-me .container .what-i-do .graphics:hover .graphics-design {
+    transition: 5s;
+    background: -webkit-linear-gradient(rgb(94, 25, 94), blue,green,yellow,orange,red);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+}
+@keyframes eq{
+    0%{
+        transform: translate(2px,-1px) rotateZ(7deg) ;
+    }
+    5%{
+        transform: translate(5px,3px) rotateZ(2deg) ;
+    }
+    10%{
+        transform: translate(-5px,3px) rotateZ(2deg) ;
+    }
+    15%{
+        transform: translate(0px,-2px) rotateZ(0deg) ;
+    }
+    20%{
+        transform: translate(-5px,3px) rotateZ(-3deg) ;
+    }
+    25%{
+        transform: translate(-1px,6px) rotateZ(1deg) ;
+    }
+    30%{
+        transform: translate(-3px,-7px) rotateZ(-3deg) ;
+    }
+    35%{
+        transform: translate(4px,-2px) rotateZ(4deg) ;
+    }
+    40%{
+        transform: translate(-5px,5px) rotateZ(-3deg) ;
+    }
+    45%{
+        transform: translate(0px,0px) rotateZ(5deg) ;
+    }
+    50%{
+        transform: translate(0px,0px) rotateZ(0deg) ;
+    }
+}
+@keyframes tilt{
+    0%{
+        transform:translateY(0px) rotate(0deg) ;
+        color: white;
+    }
+    40%{
+        transform: translateY(15px) rotate(30deg);
+        color: red;
+    }
+    60%{
+        transform: translateY(15px) rotate(30deg);
+        color: red;
+    }
+    80%{
+        transform: translateY(15px) rotate(30deg);
+        color: red;
+    }
+    100%{
+        transform: translateY(15px) rotate(30deg);
+        color:red;
+    }
 }
 @media (max-width:992px) and (min-width:768px)
 {
@@ -800,12 +910,22 @@ a:hover{
 }
 @media (max-width:768px)
 {
+    .about-me .container .what-i-do .game img{
+        left: 80px;
+        top: 100px;
+        max-width: 150px;
+    }
+    .about-me .container .what-i-do .game:hover img{
+        transform: rotateZ(-10deg) translateY(-140px);
+        transition: .7s;
+    }
     .about-me .container .what-i-do .flex-b3{
         flex-wrap: wrap;
         max-width: 600px;
     }
     .about-me .container .what-i-do .flex-b3 >div{
-        padding: 0px;  
+        padding: 20px;
+        margin: 20px 0;  
     }
     .about-me .grid-view{
         grid-template-columns: 1fr;
@@ -962,7 +1082,7 @@ a:hover{
     }
 }
 .contact-me .container .wrapper-all .contact-image{
-    background: url("small-squares.svg");
+    background: url("../img/small-squares.svg");
     background-size: cover;
     flex:40%;
     display: flex;
