added styled logo

--- a/css/test.css
+++ b/css/test.css
@@ -17,7 +17,7 @@ html{
     height: 100%;
 }
 body{
-    
+    overflow-x: hidden;
     background: rgb(0, 0, 0);
     color: #ddd;
     font-family: 'Raleway', Tahoma, Geneva, Verdana, sans-serif;
@@ -202,6 +202,17 @@ a:hover{
     padding: 10px 0;
     transition: ease-in-out .3s;
 }
+.logo #header-blob{
+    position: absolute;
+   top: -100%;
+   left: -50%;
+   transition: ease-in-out 0.3s;
+   fill: #5a74f7;
+  width: 200px;
+  z-index: -100;
+  animation: rot-move-resize 10s linear infinite ;
+  transform-origin: 50% 50%;
+}
 .logo img{
     max-width: 120px;
     
@@ -233,6 +244,11 @@ a:hover{
     display: none;
 }
 @media(max-width:768px){
+    /* .header .logo #header-blob{
+        position: absolute;
+        top: -50px;
+        left: -20px;
+    } */
     .nav-bar{
         position: fixed;
         background: #303030;
