--- a/css/style.css
+++ b/css/style.css
@@ -975,10 +975,12 @@ a:hover{
     text-align: justify;
     padding: 15px;
     margin: 50px 0;
+    max-width: 100%;
 }
 .my-projects .container .project-wrapper .project-text{
     background: #303030;
     padding: 15px;
+    max-width: 100%;
 }
 
 .my-projects .container .project-wrapper .project-text .project-content h2{
@@ -1006,7 +1008,7 @@ a:hover{
     align-items: center;
     display: flex;
 }
-.my-projects .container .project-wrapper .project-graphics img{
+.my-projects .container .project-wrapper .project-graphics img, .my-projects .container .project-wrapper .project-graphics video{
     width: 100%;
     height: 100%;
     border-radius: 10px;
